# Vayne

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_llm.py
.github/workflows/: ci.yml
docs/: VAYNE_ROADMAP.md  architecture_audit.md  confidence_audit.md  phase_d_search_plan.md  phase_e_confidence_engine.md  phase_fg_risk_proof.md  phase_h_attack_categories.md  phase_i_report.md  proof_system.md  risk_calibration.md  step_b_capability_transitions.md  step_c_exploit_intelligence.md  step_d_search_engine.md
examples/: metasploit.xml
examples/scan_results/: burp.xml  evidence_manifest.json  firstrun.xml  httpx.json  katana.json  naabu.json  nessus.csv  nessus.nessus  nmap.xml  nuclei.json  openvas.xml
product/: README.md
product/backend/: auth.py  config.py  deps.py  env.py  main.py  (+2 more)
scripts/: clear_duplicate_investigations.py  demo_phase_bc.py  fit_calibration.py  phase_d_parity_check.py
tests/: _production_fixtures.py  _search_fixtures.py  test_acceptance_proof.py  test_alternative_paths.py  test_analyst.py  test_analyst_reports.py  test_attack_categories.py  test_attack_paths.py  test_attack_stories.py  test_attack_surface_scoring.py  test_beam_search.py  test_capability_transitions.py  test_category_determinism.py  test_cloud_intelligence.py  test_confidence_calibration.py  test_confidence_determinism.py  test_confidence_proof.py  test_correlator.py  test_credential_intelligence.py  test_evidence_confidence.py  test_executive_reports.py  test_exploit_intelligence.py  test_exploitability.py  test_false_positive_filter.py  test_graph_exports.py  test_graph_normalization.py  test_identity_intelligence.py  test_lateral_intelligence.py  test_mitre_mapping.py  test_node_model.py  test_orchestrator.py  test_parsers.py  test_phase2_engine.py  test_phase3_investigation.py  test_phase4.py  test_phase_fg_determinism.py  test_phase_i_determinism.py  test_pipeline.py  test_production_exports.py  test_reasoning_engine.py  (+11 more)
vayne/: __init__.py  models.py
(+482 files in other folders)
