[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vayne"
version = "0.2.0"
description = "AI security analyst — correlate, validate, and investigate scan findings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "networkx>=3.4.0",
    "pandas>=2.2.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.17",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.24.0", "ruff>=0.8.0"]

[project.scripts]
vayne = "vayne.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vayne*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
